# natureofcode

./: CMakeLists.txt  README.md  main.cpp
bargraph/: bargraph.cpp  bargraph_controller.cpp  bargraph_controller.hpp
bouncingball/: CMakeLists.txt  bouncingball.cpp
bouncingball/includes/engine/: engine.hpp
bouncingball/includes/manager/: eventmanager.hpp
bouncingball/includes/objects/: ball.hpp
bouncingball/src/engine/: CMakeLists.txt  engine.cpp
bouncingball/src/manager/: CMakeLists.txt  eventmanager.cpp
bouncingball/src/objects/: CMakeLists.txt  ball.cpp
common/: utils.hpp
friction/: CMakeLists.txt  friction.cpp
interface/: IController.hpp
objectonclick/: CMakeLists.txt  objectonclick.cpp
particlecollission/: CMakeLists.txt  collission.cpp
randomwalker/: .randomwalker_controller.cpp.swp  CMakeLists.txt  randomwalker.cpp  randomwalker_controller.cpp  randomwalker_controller.hpp
utils/: utilities.hpp
velocity/: CMakeLists.txt  velocity.cpp
